Replace usage of FluentIterableCompat with Java 8 lambda features